--- a/tablet.css
+++ b/tablet.css
@@ -92,7 +92,7 @@ header p
 
 #search_bar__logo
 {
-    padding: 0.6rem 1.2rem 0.9rem 1.5rem;
+    padding: 1.1rem 1.2rem 1.4rem 1.5rem;
 }
 
 .search_bar
@@ -116,7 +116,10 @@ header p
     font-size: 2.3rem;
 }
 
-
+#filters__container
+{
+    display:unset;
+}
 
 .filters__button
 {
@@ -266,7 +269,7 @@ header p
 {
     border-radius: 2rem 0rem 0rem 2rem;
     object-fit: cover;
-    max-width: 30%;
+    max-width: 100%;
     flex-grow: 1;
     flex-shrink: 1;
     height: 15rem;
